--- a/index.html
+++ b/index.html
@@ -78,29 +78,20 @@
     <section id="about" class="about">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title mb-3">
           <h2 style="font-family: 'SendBox font bold'">About Me</h2>
-          <h1 style="font-family: 'SendBox font bold'">"제가 정말 잘 하는 일은 개발입니다."</h1>
+          <h1 style="font-family: 'SendBox font bold'; letter-spacing: 3px">"개발에 정진하겠습니다."</h1>
         </div>
 
         <div class="row">
           <div class="col-lg-10 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <p class="fst-alic" style="font-family: 'SendBox font light'">저는 1년에 가까운 개발 공백기가
-              있습니다. 이유는 이직한지 얼마 안되었던 브랜디에서 경영악화로 구조조정을 겪은 후 충격에 방황했기 때문입니다.
-             평소에 하고 싶었던 잘 못 꾸미는 남자들을 코칭해주는 스타일 컨설팅, 유튜브 컨텐츠 제작에 도전 하였습니다.
-              1년에 가까운 시간동안 도전 했지만 유튜브는 노출율이 줄어 들었고, 스타일컨설팅 사업도 잘 되지 않아 사업을 정리하게 됐습니다.<br><br>
-
-              이 경험을 통해 자신에게 불리한 정보까지 다 수집하고 오랫동안 고민한 후 객관적인 관점에서 결정해야 한다는 것을 배웠습니다.
-              마음을 정리한 후 저의 과거를 되짚어 봤습니다. 야근과 주말출근을 하며 문제를 해결하고, 개발일정에 쫓겨도 일을 잘 마무리 했을 때 책임을 다 한 것에 뿌듯함과 보람을 느꼈습니다.
-              삼성증권 부장님과 농담을 주고 받으며 프로젝트 마감일까지 함께 고생했던 일, 장애가 발생했으니 지원을 요청하는 메일이 한꺼번에 5통이 와도 마무리 후
-              수고했다는 팀장님의 한마디면 보람찼던 일이 생각났습니다. 그때 깨달았습니다. 내가 정말 잘 하는 일은 개발이구나.
-
-              <br><br></p>
-
-              <b style="font-family: 'SendBox font medium'">지금은 개발자로 복귀하기 위해 스터디카페 월권을 끊었고 매일 10시간씩 공부하고 있습니다.</b><br>
-              <p style="font-family: 'SendBox font light'">Spring Boot, Spring Security, Spring Data JPA, Thymeleaf, JWT를 집중적으로 공부하였고 해당 기술스택을 사용한
-                프로젝트를 완성하였습니다.<br><br></p>
-
+            <p style="font-family: 'SendBox font medium'; margin-bottom: 45px">"안녕하세요 조금 늦게 시작했지만 신입 서버 개발자가 되고 싶은 최영하입니다."</p>
+            <p class="fst-alic" style="margin-bottom: 30px">저는 검색엔진 엔지니어로 일하면서 항상 사업에 도전해보고 싶었습니다.
+              그러다가 기회가 생겨 브랜디라는 커머스 회사로 이직을 하게 됐습니다. 하지만 갑작스러운 경영악화를 사유로 회사를 나오게 됐습니다.
+              저는 이 위기를 기회로 바꾸고 싶었고, 젊었을 때 사업에 도전하고 싶어 과감히 사업을 시작했습니다.
+              1년에 가까운 시간동안 마케팅, 영업, 기획, 기술공부, 벤치마킹 등 노력했지만 점점 한계를 느끼게 되어 사업을 정리했습니다.
+              이번 도전으로 잃은 것도 많지만 배운 것도 많습니다. 무엇보다 앞으로의 삶의 방향을 확실히 잡을 수 있었습니다.
+              남들보다 늦게 시작한 만큼 남들보다 더욱 노력 할 것을 결심했고, 하루 종일 시간을 투자하여 개발 공부를 하고 있습니다.</p>
           </div>
         </div>
 
@@ -111,7 +102,7 @@
 
     <!-- ======= Skills Section ======= -->
     <!-- Skills Section with Descriptions and Progress Bars -->
-    <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills section-bg" data-aos="fade-up">
       <div class="container">
         <div class="section-title">
           <h2 style="font-family: 'SendBox font bold'">Tech Skills</h2>
@@ -182,9 +173,10 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: orangered">Creative Youtuber</h3>
-                      <div>Spring Boot, Spring Security, JWT, JPA, Thymeleaf를 적용하고 학습하기 위해 제작한 프로젝트입니다.</div>
+                      <h4 style="color: orangered">2024.04 ~ 2024.05</h4>
+                      <div>Spring Boot, Spring Security, JWT, JPA, Thymeleaf를 학습하고 적용한 프로젝트입니다.</div>
                       <a href="https://pdflink.to/f8e64e86/" target="_blank" class="btn btn-light btn-sm">상세보기</a>
-                      <a href="https://creativeyoutuber.store" target="_blank" class="btn btn-light btn-sm">더 알아보기</a>
+                      <a href="https://creativeyoutuber.store" target="_blank" class="btn btn-light btn-sm">데모 사이트</a>
                     </div>
                   </div>
                 </div>
@@ -195,9 +187,11 @@
                   <img src="assets/img/workout.png" alt="work out" class="img-fluid">
                   <div class="project-info">
                     <div class="project-content">
-                      <h3 style="color: darkviolet">Work out</h3>
+                      <h3 style="color: deeppink">Work out</h3>
+                      <h3 style="color: deeppink">2022.03 ~ 2022.05</h3>
                       <div>Spring MVC, Mybatis, JSP, Redis, Rest API, Jquery를 학습한 후 제작한 대학교 졸업작품 입니다.</div>
-                      <a href="https://www.youtube.com/watch?v=PJl0Q-T9dbU&t=110s" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="https://pdflink.to/d3da3ef9/" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                      <a href="https://www.youtube.com/watch?v=PJl0Q-T9dbU&t=110s" target="_blank" class="btn btn-light btn-sm">시연 동영상</a>
                     </div>
                   </div>
                 </div>
@@ -213,6 +207,7 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: yellowgreen">크립토 시그널</h3>
+                      <h3 style="color: yellowgreen">2022.09 ~ 2022.10</h3>
                       <div>Spring MVC, MyBatis, JSP, Jquery, MongoDB, 오피니언마이닝, 크롤링, Pandas, Numpy 기술을 적용한 프로젝트입니다. 팀장 역할을 맡았으며 팀원들은 동영상 제작, 기술설명 자료를 구성해주고 모든 개발은 혼자 하였습니다.</div>
                       <a href="https://youtu.be/xsCabkQBIGY?si=3qG61bdDCZpHK1Zo" target="_blank" class="btn btn-light btn-sm">상세보기</a>
                     </div>
@@ -226,8 +221,27 @@
                   <div class="project-info">
                     <div class="project-content">
                       <h3 style="color: #e8a702">Diet Helper</h3>
+                      <h3 style="color: #e8a702">2021.09 ~ 2021.10</h3>
                       <div>Spring MVC, MyBatis, JSP, Rest API, Oracle DB 기술을 적용한 팀프로젝트 입니다. 팀장 역할을 맡았으며 식단추천 기능, 회원가입을 구현하였습니다.</div>
                       <a href="https://www.youtube.com/watch?v=ZYtlykQZcrI&t=52s" target="_blank" class="btn btn-light btn-sm">상세보기</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div ><h3 style="font-family: 'SendBox font bold'">기능학습</h3></div>
+          <div class="container py-1" data-aos="fade-up">
+            <div class="row">
+              <div class="col-md-6 mb-4">
+                <div class="project-card">
+                  <img src="assets/img/pockemon.png" alt="crypto signal" class="img-fluid">
+                  <div class="project-info">
+                    <div class="project-content">
+                      <h3 style="color: yellowgreen">Vue.js 기능학습</h3>
+                      <h3 style="color: yellowgreen">2024.06 ~ 2024.06</h3>
+                      <div>보간법, v-vind, v-on, 이벤트 처리, methods, computed, watch, v-if, v-for 기능을 학습한 것을 바탕으로 만든 간단한 게임입니다.</div>
+                      <a href="https://pocketmonstergame.netlify.app/" target="_blank" class="btn btn-light btn-sm">상세보기</a>
                     </div>
                   </div>
                 </div>
